[package]
name = "common"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/common.rs"

[dependencies]

[dependencies.platform_types]
path = "../platform_types"

[dependencies.features]
path = "../features"

[dependencies.inner_common]
path = "../inner_common"

