[package]
name = "common"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/common.rs"

[dependencies]

[dependencies.features]
path = "../features"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.screen]
path = "../screen"

[dependencies.xs]
path = "../xs"


