[package]
name = "game_state"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]
edition = "2021"

[lib]
path = "src/game_state.rs"

[dependencies.gfx]
path = "../gfx"

[dependencies.models]
path = "../models"

[dependencies.platform_types]
path = "../platform_types"

[dependencies.screen]
path = "../screen"

[dependencies.xs]
path = "../xs"
